--- a/home.html
+++ b/home.html
@@ -1,2 +1,6 @@
-<h1>This is about home</h1>
-{{greeting}}
+<h1>Vise Versa</h1>
+<form>
+    <textarea cols="50" rows="10" name="usertext"></textarea>
+    <br><br>
+    <input type="submit" value="Reverse!">
+</form>
